# appstackgen

./: CMakeLists.txt  README.md
buildsys/: FindCppUnit.cmake
src/lib/asg/: CMakeLists.txt
src/lib/asg/base/: CMakeLists.txt  abstractnode.cpp  abstractnode.h  node.cpp  node.h  project.cpp  project.h  projectfragment.cpp  projectfragment.h  rootnode.cpp  rootnode.h  subnode.h
src/lib/asg/domain_model/: CMakeLists.txt  audit_value.h  bounded_context.cpp  bounded_context.h  bounded_context_fragment.cpp  concurrency_control_value.cpp  concurrency_control_value.h  domain.cpp  domain.h  domain_object.cpp  domain_object.h  domain_object_fragment.cpp  id_value.cpp  id_value.h  last_changed_by_user_value.cpp  last_changed_by_user_value.h  last_changed_timestamp_value.h  model.cpp  model.h  model_fragment.cpp  object_version.cpp  object_version.h  persistence_value.h  primitive_data_type.h  system_value.h  value.h
src/lib/asg/domainmodel/: CMakeLists.txt  audit_value.cpp  audit_value.h  bounded_context.cpp  bounded_context.h  bounded_context_fragment.h  boundedcontext.cpp  boundedcontext.h  boundedcontextfragment.cpp  boundedcontextfragment.h  concurrency_control_value.h  domain.cpp  domain.h  domain_fragment.cpp  domain_fragment.h  domain_object.h  domain_object_fragment.h  id_value.h  last_changed_by_user_value.h  last_changed_timestamp_value.cpp  last_changed_timestamp_value.h  model.cpp  model.h  model_fragment.h  modelfragment.cpp  modelfragment.h  object_version.h  persistence_value.cpp  persistence_value.h  primitive_data_type.cpp  primitive_data_type.h  primitivedatatype.cpp  primitivedatatype.h  system_value.cpp  system_value.h  value.cpp  value.h
src/lib/asg/graph/: CMakeLists.txt  abstract_edge.cpp  abstract_edge.h  abstract_ege.h  abstract_graph.cpp  abstract_graph.h  abstract_graph_fragment.cpp  abstract_node.cpp  abstract_node.h  abstractedge.cpp  abstractedge.h  abstractgraph.cpp  abstractgraph.h  abstractgraphfragment.cpp  abstractgraphfragment.h  abstractnode.cpp  abstractnode.h  default_graph.cpp  default_graph.h  defaultgraph.cpp  defaultgraph.h  edge.cpp  edge.h  graph_fragment.cpp  graphfragment.cpp  graphfragment.h  index_edge.cpp  index_edge.h  index_node.cpp  index_node.h  indexedge.cpp  indexedge.h  indexnode.cpp  indexnode.h  node.cpp  node.h  owns.cpp  owns.h  system_edge.cpp  system_edge.h  (+14 more)
src/lib/asg/graph_tools/: CMakeLists.txt  graph_to_dot.cpp  graph_to_dot.h  graph_to_plain_text.cpp  graph_to_plain_text.h
src/lib/asg/graphtools/: CMakeLists.txt  graph_to_dot.h  graph_to_plain_text.cpp  graph_to_plain_text.h  graphtoplaintext.cpp  graphtoplaintext.h
src/lib/asg/kernel/: CMakeLists.txt  file_tools.cpp  file_tools.h  module.cpp  module.h  object_id.cpp  object_id.h  object_id_generator.cpp  object_id_generator.h  object_name.cpp  objectid.cpp  objectid.h  objectidgenerator.cpp  objectname.cpp  objectname.h  string_tools.cpp  string_tools.h  stringtools.cpp  stringtools.h  types.h  uuidgenerator.cpp  uuidgenerator.h
src/lib/asg/postgres_backend_model/: CMakeLists.txt  data_schema.cpp  data_schema.h  dedicated_schema.cpp  dedicated_schema.h  kernel_schema.cpp  kernel_schema.h  model.cpp  model.h
src/lib/asg/postgres_model/: CMakeLists.txt  custom_constant.cpp  custom_constant.h  extension.cpp  extension.h  extension_data_type.cpp  extension_data_type.h  model.cpp  model.h  provides_data_type.cpp  provides_data_type.h  sequence.cpp  sequence.h  serial_data_type.cpp  serial_data_type.h
src/lib/asg/relational_model/: CMakeLists.txt  constant.cpp  constant.h  custom_data_type.cpp  custom_data_type.h  data_type.cpp  data_type.h  has_data_type.cpp  has_data_type.h  iso_constant.cpp  iso_constant.h  iso_data_type.cpp  iso_data_type.h  model.cpp  model.h  model_fragment.cpp  model_fragment.h  not_null_constraint.cpp  not_null_constraint.h  primary_key_constraint.cpp  primary_key_constraint.h  schema.cpp  schema.h  schema_fragment.cpp  schema_fragment.h  table.cpp  table.h  table_column.cpp  table_column.h  table_column_constraint.cpp  table_column_constraint.h  table_column_fragment.cpp  table_column_fragment.h  table_constraint.cpp  table_constraint.h  table_fragment.cpp  table_fragment.h  tabloid.cpp  tabloid.h  unique_constraint.cpp  (+3 more)
src/lib/asg/sql/: CMakeLists.txt  begin.cpp  begin.h  commit.cpp  commit.h  create.h  create_database.cpp  create_database.h  create_schema.cpp  create_schema.h  create_table.cpp  create_table.h  ddl_statement.cpp  ddl_statement.h  rollback.cpp  rollback.h  script.cpp  script.h  statement.cpp  statement.h  transaction_statement.cpp  transaction_statement.h
src/test/asg/: CMakeLists.txt
src/test/asg/base/: CMakeLists.txt  test_project.cpp  testproject.cpp  testproject.h  testprojectfactory.cpp  testprojectfactory.h
src/test/asg/domain_model/: CMakeLists.txt  project_factory.cpp  project_factory.h  test_project.cpp
src/test/asg/domainmodel/: CMakeLists.txt  project_factory.cpp  project_factory.h  projectfactory.cpp  test_project.cpp  testproject.cpp  testproject.h  testprojectfactory.cpp  testprojectfactory.h
src/test/asg/graph/: CMakeLists.txt  test_edge.h  test_node.h  testedge.cpp  testedge.h  testgraph.cpp  testgraph.h  testnode.cpp  testnode.h
src/test/asg/graph_tools/: CMakeLists.txt  test_edge.cpp  test_graph_to_plain_text.cpp  test_node.cpp  test_node.h
src/test/asg/graphtools/: CMakeLists.txt  test_graph_to_plain_text.cpp  testedge.cpp  testedge.h  testgraphtoplaintext.cpp  testnode.cpp  testnode.h
src/test/asg/gtest_selftest/: CMakeLists.txt  gtest_selftest.cpp
src/test/asg/kernel/: CMakeLists.txt  infrastructure.h  test_object_id.cpp  test_object_name.cpp  testmodule.cpp  testmodule.h  testobjectid.cpp  testobjectid.h  testobjectidgenerator.cpp  testobjectname.cpp  testobjectname.h  testuuidgenerator.cpp  testuuidgenerator.h
src/test/asg/postgres_backend_model/: CMakeLists.txt  project_factory.cpp  project_factory.h  test_project.cpp
src/test/asg/postgres_model/: CMakeLists.txt  project_factory.cpp  project_factory.h  (+1 more)
src/test/common/: infrastructure.h  main.cpp
templates/: LICENSE.txt
(+9 files in other folders)
